--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ RoadMap/.idea/.idea.RoadMap/.idea/vcs.xml
 RoadMap/.idea/.idea.RoadMap/.idea/projectSettingsUpdater.xml
 RoadMap/.idea/.idea.RoadMap/.idea/indexLayout.xml
 RoadMap/.idea/.idea.RoadMap/.idea/encodings.xml
+RoadMap/.idea/.idea.RoadMap/.idea/dataSources.xml
+RoadMap/.idea/.idea.RoadMap/.idea/sqldialects.xml
