--- a/RoadMap/Models/Models.csproj
+++ b/RoadMap/Models/Models.csproj
@@ -39,6 +39,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Classes\Address.cs" />
+        <Compile Include="Classes\Addresses.cs" />
         <Compile Include="Classes\BuildingNumber.cs" />
         <Compile Include="Classes\CityName.cs" />
         <Compile Include="Classes\CityType.cs" />
