--- a/RoadMap/ProcedureInjectionFramework/ProcedureInjectionFramework.csproj
+++ b/RoadMap/ProcedureInjectionFramework/ProcedureInjectionFramework.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\AdditionalParamsAttribute.cs" />
     <Compile Include="Attributes\CreateProcAttribute.cs" />
     <Compile Include="Attributes\DeleteProcAttribute.cs" />
     <Compile Include="Attributes\IDataAttribute.cs" />
